changed annotation sockets name and added to api.yaml documentation
