# backend/webserver/sockets/annotation.js
@@ -18,12 +18,12 @@ module.exports = class AnnotationSocket extends Socket {
 
     init() {
 
-        this.socket.on("addAnnotation", async (data) => {
+        this.socket.on("annotationAdd", async (data) => {
             try {
                 const annotation = await this.updateCreatorName(await dbAddAnnotation(data, this.user_id))
                 await this.getSocket("CommentSocket").addComment(annotation[0].documentId, annotation[0].id);
 
-                this.socket.emit("annotationUpdate", annotation)
+                this.socket.emit("annotationRefresh", annotation)
             } catch (e) {
                 this.logger.error("Could not add annotation and/or comment to database. Error: " + e);
 
@@ -35,16 +35,16 @@ module.exports = class AnnotationSocket extends Socket {
             }
         });
 
-        this.socket.on("getAnnotation", async (data) => {
+        this.socket.on("annotationGet", async (data) => {
             try {
-                const anno = await dbGetAnnotation(data.id);
+                const anno = await dbGetAnnotation(data.annotationId);
 
                 if (!this.checkUserAccess(anno.userId) && !this.checkDocumentAccess(data.documentId)) {
                     this.sendToast("You have no permission to change this annotation", "Annotation Not Saved", "danger");
                 }
 
                 await this.getSocket("CommentSocket").loadCommentsByAnnotation(anno.id);
-                this.socket.emit("annotationUpdate", await this.updateCreatorName(anno));
+                this.socket.emit("annotationRefresh", await this.updateCreatorName(anno));
 
             } catch (e) {
                 this.logger.error("Could not get annotation and/or comment in database. Error: " + e);
@@ -52,9 +52,9 @@ module.exports = class AnnotationSocket extends Socket {
             }
         });
 
-        this.socket.on("updateAnnotation", async (data) => {
+        this.socket.on("annotationUpdate", async (data) => {
             try {
-                const origAnnotation = await dbGetAnnotation(data.id);
+                const origAnnotation = await dbGetAnnotation(data.annotationId);
 
                 if (!this.checkUserAccess(origAnnotation.userId)) {
                     this.sendToast("You have no permission to change this annotation", "Annotation Not Saved", "danger");
@@ -65,7 +65,7 @@ module.exports = class AnnotationSocket extends Socket {
                 if (newAnno[1].deleted) {
                     await this.getSocket("CommentSocket").deleteChildCommentsByAnnotation(newAnno[1].id);
                 }
-                this.io.to("doc:" + newAnno[1].documentId).emit("annotationUpdate", await this.updateCreatorName(newAnno[1].get({plain: true})));
+                this.io.to("doc:" + newAnno[1].documentId).emit("annotationRefresh", await this.updateCreatorName(newAnno[1].get({plain: true})));
 
             } catch (e) {
                 this.logger.error("Could not update annotation and/or comment in database. Error: " + e);
@@ -78,31 +78,31 @@ module.exports = class AnnotationSocket extends Socket {
             }
         });
 
-        this.socket.on("loadAnnotations", async (data) => {
+        this.socket.on("annotationGetByDocument", async (data) => {
             try {
-                this.socket.emit("annotationUpdate", await this.updateCreatorName(await dbLoadByDocument(data.id)));
+                this.socket.emit("annotationRefresh", await this.updateCreatorName(await dbLoadByDocument(data.documentId)));
             } catch (e) {
                 this.logger.info("Error during loading of annotations: " + e);
                 this.sendToast("Internal server error. Failed to load annotations.", "Internal server error", "danger");
             }
         });
 
-        this.socket.on("exportAnnotationsByDocument", async (data) => {
+        this.socket.on("annotationExportByDocument", async (data) => {
             let annotations;
             try {
-                annotations = await this.updateCreatorName(await dbLoadByDocument(data.id));
+                annotations = await this.updateCreatorName(await dbLoadByDocument(data.documentId));
             } catch (e) {
                 this.logger.info("Error during loading of annotations: " + e);
 
                 this.sendToast("Internal server error. Failed to load annotations.", "Internal server error", "danger");
-                this.socket.emit("exportedAnnotations", {"success": false, "documentId": data.documentId});
+                this.socket.emit("annotationExport", {"success": false, "documentId": data.documentId});
 
                 return;
             }
 
-            this.socket.emit("exportedAnnotations", {
+            this.socket.emit("annotationExport", {
                 "success": true,
-                "document_id": data.id,
+                "documentId": data.id,
                 "objs": await Promise.all(annotations.map(async (a) => await dbFormatForExport(a)))
             });
         });
